Settings: Hide lineage black theme toggle
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/dark_mode_settings.xml
+++ b/res/xml/dark_mode_settings.xml
@@ -47,11 +47,11 @@
         settings:controller="com.android.settings.display.darkmode.DarkModeActivationPreferenceController"
         settings:keywords="@string/keywords_dark_ui_mode"/>
 
-    <lineageos.preference.LineageSystemSettingSwitchPreference
+    <!--<lineageos.preference.LineageSystemSettingSwitchPreference
         android:key="berry_black_theme"
         android:title="@string/berry_black_theme_title"
         android:summary="@string/berry_black_theme_summary"
-        android:defaultValue="false" />
+        android:defaultValue="false" />-->
 
     <com.android.settingslib.widget.FooterPreference
             android:key="dark_ui_footer"
