--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -339,6 +339,13 @@
             android:entryValues="@array/bluetooth_a2dp_codec_values" />
 
         <ListPreference
+            android:key="a2dp_source_codec_priority"
+            android:title="@string/a2dp_source_codec_priority_title"
+            android:dialogTitle="@string/a2dp_source_codec_priority_dialog_title"
+            android:entries="@array/a2dp_source_codec_priority_entries"
+            android:entryValues="@array/a2dp_source_codec_priority_values" />
+
+        <ListPreference
             android:key="bluetooth_select_a2dp_sample_rate"
             android:title="@string/bluetooth_select_a2dp_codec_sample_rate"
             android:dialogTitle="@string/bluetooth_select_a2dp_codec_sample_rate_dialog_title"
